k8s/camel-edge-deployment2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camel-edge
  labels:
    app: point-of-sale
    app.kubernetes.io/part-of: pos
    app.openshift.io/runtime: camel  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camel-edge
  template:
    metadata:
      labels:
        app: camel-edge
    spec:
      containers:
      - name: camel-edge
        image: quay.io/dbrugger946/camel-edge-simple:1.0.9
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: camel-edge-svc
spec:
  selector:
    app: camel-edge
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: camel
spec:
  to:
    kind: Service
    name: camel-edge-svc
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
...
