k8s/detection-results-edge.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: detection-results
    app.kubernetes.io/version: 1.0.1
  name: detection-results
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: detection-results
      app.kubernetes.io/version: 1.0.1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: detection-results
        app.kubernetes.io/version: 1.0.1
    spec:
      serviceAccountName: detection-results
      containers:
      - name: detection-results
        image: quay.io/dbrugger946/detection-results-edge:1.0.1   
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: detection-results
    app.kubernetes.io/version: 1.0.1
  name: detection-results
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: detection-results
    app.kubernetes.io/version: 1.0.1
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: detection-results
spec:
  to:
    kind: Service
    name: detection-results
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
